syntax = "proto3";

package protobuf;

option java_package = "edu.snu.vortex.runtime.common.comm";
option java_outer_classname = "RuntimeMessages";

enum Type {
    ScheduleTaskGroup = 0;
    TaskStateChanged = 1;
    ExecutorReady = 2;
}

message RtControllableMsg {
    Type type = 1;
    oneof messageTypes {
        TaskStateChangedMsg taskStateChangedMsg = 2;
        ExecutorReadyMsg executorReadyMsg = 3;
    }
}

message TaskStateChangedMsg {
    string taskId = 1;
    TaskState state = 2;

    enum TaskState {
        READY = 0;
        RUNNING = 1;
        COMPLETE = 2;
        FAILED = 3;
    }
}

message ExecutorReadyMsg {
    string executorId = 1;
}



